changes Array list initiation as per java verison 7